# spec-protocol-language

./: .gitignore  CONTEXT-UPDATE.md  CONTEXT.md  Cargo.toml  GB150.1-4.rar  README.md  candidates.json  skills-lock.json
GB150.1-4/: GB_T 150.1-2024.docx  GB_T 150.2-2024.docx  GB_T 150.3-2024.docx  GB_T 150.4-2024.docx
_extract/: GB_T 150.1-2024.txt  GB_T 150.2-2024.txt  GB_T 150.3-2024.txt  GB_T 150.4-2024.txt
crates/spec/: Cargo.toml
crates/spec_core/: Cargo.toml
crates/spec_core/src/: assertion.rs  discovery.rs  engine.rs  lib.rs  model.rs  registry.rs  report.rs  rule.rs
crates/spec_schema/: Cargo.toml
crates/spec_sdk/: Cargo.toml  package.json  tsconfig.json
crates/spec_sdk/src/: lib.rs
docs/: ASME_VIII-术语定义与概念映射.md  GB150-审查点梳理表.md  GB150-术语定义与概念映射.md  GB150-术语定义表(完整版).md  GB150-术语定义表(扩展版).md  GB150-术语定义表(自动生成).md  Matt-Pocock-Skills-中英文对照表.md  NB47012-术语定义与概念映射.md  SPEC-Protocol-关联关系.md  rvm-schema.md  多标准术语对照表.md  术语变更报告.md  标准术语整理指南.md  校验报告.md
docs/adr/: ADR-001-职责边界-只做compliance.md  ADR-002-核心语言-Rust加TS-SDK.md  ADR-003-输入契约-结构化参数表.md  ADR-004-报告格式-RVM协作格式对接PDMS.md  ADR-005-量纲校验与参数表分区.md  ADR-006-审查点生命周期管理.md  ADR-007-标准术语提取与参数映射工具.md  ADR-008-Unlimited-OCR集成与批量处理架构.md  ADR-009-MCP集成设计.md
input/: params.json  params.schema.json
rules/: registry.json
tools/term_extractor/: Cargo.toml  FINAL_SUMMARY.md  GRILL_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  README.md  SUMMARY.md  ULTIMATE_SUMMARY.md
tools/term_extractor/src/: batch.rs  confidence.rs  diff.rs  docs.rs  extract.rs  graph.rs  main.rs  models.rs  ocr.rs  rules.rs  validate.rs
tools/term_extractor/src/conflicts/: mod.rs  report.rs
(+7 files in other folders)
