[package]
name = "spec_sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "napi-rs SDK — 将 spec_core 合规引擎暴露给 TypeScript / CAD 插件"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"
spec_core = { path = "../spec_core" }
spec_schema = { path = "../spec_schema" }
serde_json = "1"
serde_yaml = "0.9"

[build-dependencies]
napi-build = "2"
