[package]
name = "term_extractor"
version = "0.1.0"
edition = "2021"
description = "标准术语提取与参数映射工具 - 将工程标准整理为SPEC Protocol可用的术语表"
authors = ["SPEC Protocol Team"]

[workspace]

[[bin]]
name = "term_extractor"
path = "src/main.rs"

[dependencies]
# 共享数据契约
spec_schema = { path = "../../crates/spec_schema" }
# CLI参数解析
clap = { version = "4.4", features = ["derive"] }
# JSON序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# YAML序列化
serde_yaml = "0.9"
# 文件操作
walkdir = "2.4"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 日志
log = "0.4"
env_logger = "0.10"
# 文本处理
regex = "1.10"
# Markdown解析(简化版)
pulldown-cmark = "0.10"
# 日期时间
chrono = { version = "0.4", features = ["serde"] }
# 差异比对
similar = "2.4"
